--- a/NikeTest/pom.xml
+++ b/NikeTest/pom.xml
@@ -119,11 +119,11 @@
 		
 		<!-- spring mongo example -->
 		<!-- mongodb java driver -->
-		<dependency>
+	<!-- 	<dependency>
 			<groupId>org.mongodb</groupId>
 			<artifactId>mongo-java-driver</artifactId>
 			<version>2.11.0</version>
-		</dependency>
+		</dependency>  -->
 		
 		<!-- Spring data mongodb -->
 		<dependency>
@@ -131,6 +131,14 @@
 			<artifactId>spring-data-mongodb</artifactId>
 			<version>1.2.0.RELEASE</version>
 		</dependency>
+		
+
+		
+		<dependency>
+		<groupId>org.mongodb</groupId>
+		<artifactId>mongo-java-driver</artifactId>
+		<version>2.10.1</version>
+	</dependency>
 
 		<dependency>
 			<groupId>cglib</groupId>
